# lightops.baole.space

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  postcss.config.mjs  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src-landing/: Dockerfile  index.html  package.json  pnpm-lock.yaml
src-landing/src/: main.tsx
src-landing/src/app/: App.tsx
src-landing/src/app/components/: ApertureLogo.tsx  AppMockup.tsx  BadgePill.tsx  Changelog.tsx  Download.tsx  FeatureCard.tsx  Features.tsx  Footer.tsx  GhostButton.tsx  GradientButton.tsx  GradientOrb.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx  OpenSource.tsx  PlatformCard.tsx  Screenshots.tsx  ScrollReveal.tsx  SectionHeading.tsx
src-landing/src/app/constants/: app.ts  changelog.ts  features.ts  platforms.ts  steps.ts
src-landing/src/app/hooks/: GithubReleaseContext.tsx  useGithubRelease.ts
src-landing/src/i18n/: en.json  index.ts  vi.json
src-landing/src/styles/: fonts.css  tailwind.css  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/commands/: rename.rs  scan.rs
src/app/components/: settings-modal.tsx
src/i18n/: en.json  vi.json
