[package]
name = "lightops"
version = "0.1.1"
description = "LightOps — Desktop photo file manager"
authors = ["Bao Le <bao@baole.space>"]
license = "MIT"
repository = "https://github.com/unique01082/lightops"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "lightops_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.5"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
